--- a/scancode/Dockerfile
+++ b/scancode/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (c) Microsoft Corporation. All rights reserved.
+# Copyright (c) Microsoft Corporation and others. Made available under the MIT license.
 # SPDX-License-Identifier: MIT
 
 # Docker image for nexB/scancode-toolkit
