--- a/scancode/Dockerfile
+++ b/scancode/Dockerfile
@@ -10,11 +10,11 @@
 FROM python:2.7
 
 ENV SCANCODE_OPTIONS "--copyright --license --info --package --license-diag --only-findings --strip-root --quiet --timeout 1000 -n 3"
-ENV SCANCODE_HOME /opt/scancode-toolkit-2.9.0b1
+ENV SCANCODE_HOME /opt/scancode-toolkit-2.9.1
 ENV SCANCODE_OUTPUT_PATH /output
 ENV SCANCODE_OUTPUT_FILENAME scancode.json
 
-RUN curl -sL https://github.com/nexB/scancode-toolkit/releases/download/v2.9.0b1/scancode-toolkit-2.9.0b1.tar.bz2 | tar -C /opt -jx \
+RUN curl -sL https://github.com/nexB/scancode-toolkit/releases/download/v2.9.1/scancode-toolkit-2.9.1.tar.bz2 | tar -C /opt -jx \
 && ${SCANCODE_HOME}/scancode --version
 
 RUN mkdir /repo ${SCANCODE_OUTPUT_PATH}
